# Kolokwiarz

./: .gitignore
Kolokwiarz/: CMakeLists.txt  Doxyfile  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kolokwiarz/base/: filozofia.json  miernictwo_elektroniczne.json  multimedia.json
Kolokwiarz/core/: admin.cpp  admin.h  jsonquestionsource.cpp  jsonquestionsource.h  question.cpp  question.h  questioneditor.cpp  questioneditor.h  quizmanager.cpp  quizmanager.h  textquestion.cpp  textquestion.h  user.cpp  user.h  usermanager.cpp  usermanager.h
Kolokwiarz/gui/: endwindow.cpp  endwindow.h  endwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainmenu.cpp  mainmenu.h  mainmenu.ui  questionadder.cpp  questionadder.h  questionadder.ui  quizwindow.cpp  quizwindow.h  quizwindow.ui  rankingwindow.cpp  rankingwindow.h  rankingwindow.ui
Kolokwiarz/styles/: dark.qss  default.qss
Kolokwiarz/utils/: utils.cpp  utils.h
